# senoru

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
migrations/2020-06-29-155616_item/: up.sql
src/: db.rs  gui.rs  item_actions.rs  main.rs  models.rs  schema.rs  senoru.glade
