[package]
name = "senoru"
version = "0.1.0"
authors = ["Jason Reilly <jdr0887@gmail.com>"]
edition = "2018"
keywords = ["password", "manager", "secure", "notepad"]

[dependencies]
base64 = "^0.12"
chrono = { version = "^0.4", features = ["serde"]}
diesel = { version = "^1.4", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "^1.4"
dirs = "^3.0"
env_logger = "^0.9"
gdk = "^0.13"
gtk = { version = "^0.9", features = ["v3_24_9"] }
gio = { version = "^0.9", features = ["v2_64"] }
glib = "^0.10"
lazy_static = "^1.4"
log = { version = "^0.4", features = ["std"] }
magic-crypt = "^3.1"
passwords = "^3.1"
r2d2 = "^0.8"
simple_logger = "^1.6"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
structopt = "^0.3"
uuid =  { version = "^0.8", features = ["serde", "v4"]}
