[package]
name = "senoru"
version = "0.1.0"
authors = ["Jason Reilly <jdr0887@gmail.com>"]
edition = "2021"
keywords = ["password", "manager", "secure", "notepad"]

[dependencies]
chrono = { version = "^0.4", features = ["serde"]}
diesel = { version = "^1.4", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "^1.4"
dirs = "^3.0"
env_logger = "^0.9"
gdk = "^0.14"
gtk = { version = "^0.14", features = ["v3_24_9"] }
gio = { version = "^0.14", features = ["v2_66"] }
glib = "^0.14"
lazy_static = "^1.4"
log = { version = "^0.4", features = ["std"] }
magic-crypt = "^3.1"
passwords = "^3.1"
r2d2 = "^0.8"
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"
#serde_json = "^1.0"
clap = { version = "^3.1", features = ["derive"] }
