[package]
name = "senoru"
version = "0.2.0"
authors = ["Jason Reilly <jdr0887@gmail.com>"]
edition = "2021"
keywords = ["password", "manager", "secure", "notepad"]

[dependencies]
chrono = { version = "^0.4", features = ["serde"]}
diesel = { version = "^2.0", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "^2.0"
dirs = "^5.0"
env_logger = "^0.10"
gdk = "^0.17"
gtk = { version = "^0.17", features = ["v3_24_9"] }
gio = { version = "^0.17", features = ["v2_66"] }
glib = "^0.17"
lazy_static = "^1.4"
log = { version = "^0.4", features = ["std"] }
magic-crypt = "^3.1"
passwords = "^3.1"
r2d2 = "^0.8"
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"
#serde_json = "^1.0"
clap = { version = "^4.2", features = ["derive"] }
